--- a/app/src/main/res/layout/form_activity.xml
+++ b/app/src/main/res/layout/form_activity.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerInParent="true"
-            android:layout_margin="@dimen/activity_large_margin"
+            android:layout_marginTop="@dimen/activity_large_margin"
             android:gravity="center"
             android:text="@string/location"
             android:textColor="@color/blue4"
@@ -60,12 +60,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/textViewDescription"
+            android:layout_alignParentRight="true"
             android:layout_margin="@dimen/activity_medium_margin"
             android:padding="@dimen/activity_mid_padding"
             android:src="@drawable/refresh"
             app:srcCompat="@drawable/refresh"
-            tools:ignore="ContentDescription" />
+            tools:ignore="ContentDescription,RtlHardcoded" />
 
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textViewDescription"
+            android:layout_alignParentLeft="true"
+            android:layout_margin="@dimen/activity_medium_margin"
+            android:padding="@dimen/activity_mid_padding"
+            tools:ignore="RtlHardcoded" />
     </RelativeLayout>
 
     <Button
