--- a/app/src/main/res/layout/second_form_fragment.xml
+++ b/app/src/main/res/layout/second_form_fragment.xml
@@ -87,6 +87,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:layout_weight="1"
+                                android:text="@string/zero"
                                 android:background="@drawable/border_white_1"
                                 android:gravity="center"
                                 android:inputType="numberSigned"
@@ -124,6 +125,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:layout_weight="1"
+                                android:text="@string/zero"
                                 android:background="@drawable/border_white_1"
                                 android:gravity="center"
                                 android:inputType="numberSigned"
@@ -168,6 +170,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:layout_weight="1"
+                                android:text="@string/zero"
                                 android:background="@drawable/border_white_1"
                                 android:gravity="center"
                                 android:inputType="numberSigned"
@@ -205,6 +208,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:layout_weight="1"
+                                android:text="@string/zero"
                                 android:background="@drawable/border_white_1"
                                 android:gravity="center"
                                 android:inputType="numberSigned"
@@ -264,6 +268,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:layout_weight="1"
+                                android:text="@string/zero"
                                 android:background="@drawable/border_white_1"
                                 android:gravity="center"
                                 android:inputType="numberSigned"
@@ -301,6 +306,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:layout_weight="1"
+                                android:text="@string/zero"
                                 android:background="@drawable/border_white_1"
                                 android:gravity="center"
                                 android:inputType="numberSigned"
@@ -347,6 +353,7 @@
                                 android:layout_weight="1"
                                 android:background="@drawable/border_white_1"
                                 android:gravity="center"
+                                android:text="@string/zero"
                                 android:inputType="numberSigned"
                                 android:paddingTop="@dimen/activity_medium_padding"
                                 android:paddingBottom="@dimen/activity_medium_padding"
@@ -384,6 +391,7 @@
                                 android:layout_weight="1"
                                 android:background="@drawable/border_white_1"
                                 android:gravity="center"
+                                android:text="@string/zero"
                                 android:inputType="numberSigned"
                                 android:paddingTop="@dimen/activity_medium_padding"
                                 android:paddingBottom="@dimen/activity_medium_padding"
@@ -664,6 +672,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
+                        android:text="@string/zero"
                         android:background="@drawable/border_white_1"
                         android:gravity="center"
                         android:inputType="numberSigned"
@@ -718,6 +727,7 @@
                         android:layout_weight="1"
                         android:background="@drawable/border_white_1"
                         android:gravity="center"
+                        android:text="@string/zero"
                         android:inputType="numberSigned"
                         android:paddingTop="@dimen/activity_medium_padding"
                         android:paddingBottom="@dimen/activity_medium_padding"
