--- a/app/src/main/res/layout/document_form_activity.xml
+++ b/app/src/main/res/layout/document_form_activity.xml
@@ -10,17 +10,29 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/activity_large_margin"
+        android:layout_margin="@dimen/activity_medium_margin"
         android:orientation="vertical"
         android:weightSum="3"
         tools:ignore="ScrollViewSize">
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/activity_medium_padding"
-            android:text="@string/document_received"
-            android:textSize="@dimen/textSizeMedium" />
+            android:orientation="horizontal">
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="@dimen/activity_medium_padding"
+                android:text="@string/document_received"
+                android:textSize="@dimen/textSizeMedium" />
+        </LinearLayout>
 
         <GridView
             android:id="@+id/gridViewImage"
