--- a/app/src/main/res/layout/form_fragment.xml
+++ b/app/src/main/res/layout/form_fragment.xml
@@ -504,7 +504,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -532,8 +532,8 @@
                         <LinearLayout
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:layout_gravity="center"
+                            android:layout_weight="1"
                             android:gravity="center"
                             android:orientation="horizontal"
                             android:weightSum="7">
@@ -582,7 +582,9 @@
                                 android:background="@drawable/border_gray_1"
                                 android:gravity="center"
                                 android:hint="@string/vahed_mohasebe"
-                                android:inputType="numberSigned"
+                                android:inputType="text"
+                                android:lines="1"
+                                android:maxLines="1"
                                 tools:ignore="Autofill,RtlHardcoded,TextFields" />
 
                             <EditText
@@ -594,7 +596,9 @@
                                 android:background="@drawable/border_gray_1"
                                 android:gravity="center"
                                 android:hint="@string/a_2"
-                                android:inputType="numberSigned"
+                                android:inputType="text"
+                                android:lines="1"
+                                android:maxLines="1"
                                 tools:ignore="Autofill,RtlHardcoded,TextFields" />
                         </LinearLayout>
                     </LinearLayout>
@@ -753,6 +757,133 @@
                     android:layout_marginBottom="@dimen/activity_mid_margin"
                     android:layout_weight="1"
                     android:gravity="left"
+                    android:text="@string/ensheab_gheire_daem"
+                    android:textColor="@color/blue4"
+                    android:textSize="@dimen/textSizeLarge"
+                    tools:ignore="RtlHardcoded" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/activity_mid_margin"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:paddingTop="@dimen/activity_medium_padding"
+                    android:paddingBottom="@dimen/activity_medium_padding">
+
+                    <CheckBox
+                        android:id="@+id/checkbox1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/activity_mid_margin"
+                    android:layout_marginBottom="@dimen/activity_mid_margin"
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:text="@string/ezharat_motaqazi"
+                    android:textColor="@color/blue4"
+                    android:textSize="@dimen/textSizeLarge"
+                    tools:ignore="RtlHardcoded" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/activity_mid_margin"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:paddingTop="@dimen/activity_medium_padding"
+                    android:paddingBottom="@dimen/activity_medium_padding">
+
+                    <CheckBox
+                        android:id="@+id/checkbox2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="4">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/activity_mid_margin"
+                    android:layout_marginBottom="@dimen/activity_mid_margin"
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:text="@string/estelam_shahrdari"
+                    android:textColor="@color/blue4"
+                    android:textSize="@dimen/textSizeLarge"
+                    tools:ignore="RtlHardcoded" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/activity_mid_margin"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:paddingTop="@dimen/activity_medium_padding"
+                    android:paddingBottom="@dimen/activity_medium_padding">
+
+                    <CheckBox
+                        android:id="@+id/checkbox3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/activity_mid_margin"
+                    android:layout_marginBottom="@dimen/activity_mid_margin"
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:text="@string/parvane"
+                    android:textColor="@color/blue4"
+                    android:textSize="@dimen/textSizeLarge"
+                    tools:ignore="RtlHardcoded" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/activity_mid_margin"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:paddingTop="@dimen/activity_medium_padding"
+                    android:paddingBottom="@dimen/activity_medium_padding">
+
+                    <CheckBox
+                        android:id="@+id/checkbox4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="4">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/activity_mid_margin"
+                    android:layout_marginBottom="@dimen/activity_mid_margin"
+                    android:layout_weight="1"
+                    android:gravity="left"
                     android:text="@string/parvane_number"
                     android:textColor="@color/blue4"
                     android:textSize="@dimen/textSizeLarge"
@@ -775,72 +906,6 @@
                     android:paddingBottom="@dimen/activity_medium_padding"
                     android:singleLine="true"
                     tools:ignore="Autofill,LabelFor" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/activity_mid_margin"
-                    android:layout_marginBottom="@dimen/activity_mid_margin"
-                    android:layout_weight="1"
-                    android:gravity="left"
-                    android:text="@string/pelak"
-                    android:textColor="@color/blue4"
-                    android:textSize="@dimen/textSizeLarge"
-                    tools:ignore="RtlHardcoded" />
-
-                <EditText
-                    android:id="@+id/editTextPelak"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="@dimen/activity_mid_margin"
-                    android:layout_weight="1"
-                    android:background="@drawable/border_gray_1"
-                    android:gravity="center"
-                    android:inputType="number"
-                    android:lines="1"
-                    android:maxLength="8"
-                    android:maxLines="1"
-                    android:paddingTop="@dimen/activity_medium_padding"
-                    android:paddingBottom="@dimen/activity_medium_padding"
-                    android:singleLine="true"
-                    tools:ignore="Autofill,LabelFor" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="4">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/activity_mid_margin"
-                    android:layout_marginBottom="@dimen/activity_mid_margin"
-                    android:layout_weight="1"
-                    android:gravity="left"
-                    android:text="@string/ensheab_gheire_daem"
-                    android:textColor="@color/blue4"
-                    android:textSize="@dimen/textSizeLarge"
-                    tools:ignore="RtlHardcoded" />
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/activity_mid_margin"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:paddingTop="@dimen/activity_medium_padding"
-                    android:paddingBottom="@dimen/activity_medium_padding">
-
-                    <CheckBox
-                        android:id="@+id/checkbox3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
 
                 <TextView
                     android:layout_width="0dp"
@@ -873,6 +938,45 @@
                     android:paddingBottom="@dimen/activity_medium_padding"
                     android:singleLine="true"
                     tools:ignore="Autofill,Deprecated,LabelFor,TextFields" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="4">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/activity_mid_margin"
+                    android:layout_marginBottom="@dimen/activity_mid_margin"
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:text="@string/pelak"
+                    android:textColor="@color/blue4"
+                    android:textSize="@dimen/textSizeLarge"
+                    tools:ignore="RtlHardcoded" />
+
+                <EditText
+                    android:id="@+id/editTextPelak"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/activity_mid_margin"
+                    android:layout_weight="1"
+                    android:background="@drawable/border_gray_1"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:lines="1"
+                    android:maxLength="8"
+                    android:maxLines="1"
+                    android:paddingTop="@dimen/activity_medium_padding"
+                    android:paddingBottom="@dimen/activity_medium_padding"
+                    android:singleLine="true"
+                    tools:ignore="Autofill,LabelFor" />
+
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
