--- a/app/src/main/res/layout/create_image_activity.xml
+++ b/app/src/main/res/layout/create_image_activity.xml
@@ -16,6 +16,7 @@
         android:visibility="visible"
         tools:ignore="ContentDescription" />
 
+
     <LinearLayout
         android:id="@+id/linearLayoutSign"
         android:layout_width="match_parent"
@@ -32,10 +33,9 @@
         <com.kyanogen.signatureview.SignatureView xmlns:sign="http://schemas.android.com/apk/res-auto"
             android:id="@+id/signature_view2"
             android:layout_width="0dp"
-            android:layout_height="150dp"
+            android:layout_height="120dp"
             android:layout_marginLeft="@dimen/activity_medium_margin"
             android:layout_marginRight="@dimen/activity_mid_margin"
-            android:layout_marginBottom="@dimen/activity_medium_margin"
             android:layout_weight="1"
             android:visibility="visible"
             sign:enableSignature="true"
@@ -46,13 +46,47 @@
         <com.kyanogen.signatureview.SignatureView xmlns:sign="http://schemas.android.com/apk/res-auto"
             android:id="@+id/signature_view1"
             android:layout_width="0dp"
-            android:layout_height="150dp"
-            android:layout_marginBottom="@dimen/activity_medium_margin"
+            android:layout_height="120dp"
             android:layout_weight="1"
             android:visibility="visible"
             sign:enableSignature="true"
             sign:penColor="@color/black"
             sign:penSize="5dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayoutRefreshSign"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/button_accepted"
+        android:layout_marginLeft="@dimen/activity_large_margin"
+        android:layout_marginRight="@dimen/activity_large_margin"
+        android:gravity="bottom"
+        android:orientation="horizontal"
+        android:paddingLeft="@dimen/activity_medium_padding"
+        android:paddingRight="@dimen/activity_medium_padding">
+
+        <ImageView
+            android:id="@+id/imageViewRefresh2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/refresh"
+            android:visibility="visible"
+            tools:ignore="ContentDescription,RtlHardcoded" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            tools:ignore="UselessLeaf" />
+
+        <ImageView
+            android:id="@+id/imageViewRefresh1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/refresh"
+            android:visibility="visible"
+            tools:ignore="ContentDescription,RtlHardcoded" />
     </LinearLayout>
 
     <Button
