--- a/app/src/main/res/layout/personal_fragment.xml
+++ b/app/src/main/res/layout/personal_fragment.xml
@@ -68,9 +68,9 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/textViewBillIdTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textViewBillIdTitle"
                     android:gravity="center"
                     android:text="@string/bill_id"
                     android:textSize="@dimen/textSizeLarge"
@@ -127,73 +127,6 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="6">
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="@dimen/activity_mid_margin"
-                        android:layout_marginBottom="@dimen/activity_mid_margin"
-                        android:layout_weight="0.75"
-                        android:gravity="left"
-                        android:text="@string/nation_code"
-                        android:textColor="@color/blue4"
-                        android:textSize="@dimen/textSizeLarge"
-                        tools:ignore="RtlHardcoded" />
-
-                    <EditText
-                        android:id="@+id/editTextNationNumber"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="@dimen/activity_mid_margin"
-                        android:layout_weight="2"
-                        android:background="@drawable/border_gray_1"
-                        android:gravity="center"
-                        android:inputType="number"
-                        android:lines="1"
-                        android:maxLength="10"
-                        android:maxLines="1"
-                        android:paddingTop="@dimen/activity_medium_padding"
-                        android:paddingBottom="@dimen/activity_medium_padding"
-                        android:singleLine="true"
-                        tools:ignore="Autofill,LabelFor" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="@dimen/activity_mid_margin"
-                        android:layout_marginBottom="@dimen/activity_mid_margin"
-                        android:layout_weight="1.25"
-                        android:gravity="left"
-                        android:text="@string/shenasname"
-                        android:textColor="@color/blue4"
-                        android:textSize="@dimen/textSizeLarge"
-                        tools:ignore="RtlHardcoded" />
-
-                    <EditText
-                        android:id="@+id/editTextShenasname"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="@dimen/activity_mid_margin"
-                        android:layout_weight="2"
-                        android:background="@drawable/border_gray_1"
-                        android:gravity="center"
-                        android:inputType="number"
-                        android:lines="1"
-                        android:maxLines="1"
-                        android:paddingTop="@dimen/activity_medium_padding"
-                        android:paddingBottom="@dimen/activity_medium_padding"
-                        android:singleLine="true"
-                        tools:ignore="Autofill,LabelFor" />
-                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -308,6 +241,77 @@
                         android:layout_marginBottom="@dimen/activity_mid_margin"
                         android:layout_weight="1.25"
                         android:gravity="left"
+                        android:text="@string/shenasname"
+                        android:textColor="@color/blue4"
+                        android:textSize="@dimen/textSizeLarge"
+                        tools:ignore="RtlHardcoded" />
+
+                    <EditText
+                        android:id="@+id/editTextShenasname"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/activity_mid_margin"
+                        android:layout_weight="2"
+                        android:background="@drawable/border_gray_1"
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:lines="1"
+                        android:maxLength="10"
+                        android:maxLines="1"
+                        android:paddingTop="@dimen/activity_medium_padding"
+                        android:paddingBottom="@dimen/activity_medium_padding"
+                        android:singleLine="true"
+                        tools:ignore="Autofill,LabelFor" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="6">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/activity_mid_margin"
+                        android:layout_marginBottom="@dimen/activity_mid_margin"
+                        android:layout_weight="0.75"
+                        android:gravity="left"
+                        android:text="@string/nation_code"
+                        android:textColor="@color/blue4"
+                        android:textSize="@dimen/textSizeLarge"
+                        tools:ignore="RtlHardcoded" />
+
+                    <EditText
+                        android:id="@+id/editTextNationNumber"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/activity_mid_margin"
+                        android:layout_weight="2"
+                        android:background="@drawable/border_gray_1"
+                        android:gravity="center"
+                        android:inputType="number"
+                        android:lines="1"
+                        android:maxLength="10"
+                        android:maxLines="1"
+                        android:paddingTop="@dimen/activity_medium_padding"
+                        android:paddingBottom="@dimen/activity_medium_padding"
+                        android:singleLine="true"
+                        android:text="@string/ten_zero"
+                        tools:ignore="Autofill,LabelFor" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/activity_mid_margin"
+                        android:layout_marginBottom="@dimen/activity_mid_margin"
+                        android:layout_weight="1.25"
+                        android:gravity="left"
                         android:text="@string/postal_code"
                         android:textColor="@color/blue4"
                         android:textSize="@dimen/textSizeLarge"
@@ -330,6 +334,7 @@
                         android:paddingBottom="@dimen/activity_medium_padding"
                         android:singleLine="true"
                         tools:ignore="Autofill,LabelFor" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -346,14 +351,13 @@
                         android:layout_marginBottom="@dimen/activity_mid_margin"
                         android:layout_weight="0.75"
                         android:gravity="left"
-                        android:text="@string/eshterak"
+                        android:text="@string/radif"
                         android:textColor="@color/blue4"
                         android:textSize="@dimen/textSizeLarge"
                         tools:ignore="RtlHardcoded" />
 
-
                     <TextView
-                        android:id="@+id/editTextEshterak"
+                        android:id="@+id/editTextRadif"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -377,14 +381,13 @@
                         android:layout_marginBottom="@dimen/activity_mid_margin"
                         android:layout_weight="1.25"
                         android:gravity="left"
-                        android:text="@string/radif"
+                        android:text="@string/eshterak"
                         android:textColor="@color/blue4"
                         android:textSize="@dimen/textSizeLarge"
-
                         tools:ignore="RtlHardcoded" />
 
                     <TextView
-                        android:id="@+id/editTextRadif"
+                        android:id="@+id/editTextEshterak"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -399,6 +402,7 @@
                         android:singleLine="true"
                         android:textSize="@dimen/textSizeMedium"
                         android:textStyle="bold" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -414,6 +418,38 @@
                         android:layout_marginTop="@dimen/activity_mid_margin"
                         android:layout_marginBottom="@dimen/activity_mid_margin"
                         android:layout_weight="0.75"
+                        android:gravity="left"
+                        android:text="@string/mobile_number"
+                        android:textColor="@color/blue4"
+                        android:textSize="@dimen/textSizeLarge"
+
+                        tools:ignore="RtlHardcoded" />
+
+                    <EditText
+                        android:id="@+id/editTextMobile"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/activity_mid_margin"
+                        android:layout_weight="2"
+                        android:background="@drawable/border_gray_1"
+                        android:gravity="center"
+                        android:inputType="phone"
+                        android:lines="1"
+                        android:maxLength="11"
+                        android:maxLines="1"
+                        android:paddingTop="@dimen/activity_medium_padding"
+                        android:paddingBottom="@dimen/activity_medium_padding"
+                        android:singleLine="true"
+                        tools:ignore="Autofill,LabelFor" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/activity_mid_margin"
+                        android:layout_marginBottom="@dimen/activity_mid_margin"
+                        android:layout_weight="1.25"
                         android:gravity="left"
                         android:text="@string/phone_number"
                         android:textColor="@color/blue4"
@@ -439,37 +475,6 @@
                         android:singleLine="true"
                         tools:ignore="Autofill,LabelFor" />
 
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="@dimen/activity_mid_margin"
-                        android:layout_marginBottom="@dimen/activity_mid_margin"
-                        android:layout_weight="1.25"
-                        android:gravity="left"
-                        android:text="@string/mobile_number"
-                        android:textColor="@color/blue4"
-                        android:textSize="@dimen/textSizeLarge"
-
-                        tools:ignore="RtlHardcoded" />
-
-                    <EditText
-                        android:id="@+id/editTextMobile"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="@dimen/activity_mid_margin"
-                        android:layout_weight="2"
-                        android:background="@drawable/border_gray_1"
-                        android:gravity="center"
-                        android:inputType="phone"
-                        android:lines="1"
-                        android:maxLength="11"
-                        android:maxLines="1"
-                        android:paddingTop="@dimen/activity_medium_padding"
-                        android:paddingBottom="@dimen/activity_medium_padding"
-                        android:singleLine="true"
-                        tools:ignore="Autofill,LabelFor" />
                 </LinearLayout>
 
                 <LinearLayout
